@@ -87,6 +87,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.6.4.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -113,31 +119,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
-<!--            <plugin>-->
-
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-jar-plugin</artifactId>-->
-<!--                <configuration>-->
-<!--                    <archive>-->
-<!--                        <manifest>-->
-<!--                            <mainClass>restapi.RestAPI</mainClass>-->
-<!--                        </manifest>-->
-<!--                    </archive>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>2.22.0</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                    <argLine>&#45;&#45;add-modules java.base ${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--                    <forkCount>3</forkCount>-->
-<!--                    <reuseForks>true</reuseForks>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
 
             <plugin>
                 <groupId>com.heroku.sdk</groupId>
